Callout applied to multiple collections

--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -16528,6 +16528,13 @@ $color-primary: hsl(41, 44%, 37%);
   margin-bottom: $half-gutter;
 }
 
+.margin-top-md {
+  margin-top: $half-gutter;
+}
+.margin-top-lg {
+  margin-top: $gutter;
+}
+
 .padding-y-xl {
   margin-top: 60px;
   margin-bottom: 60px;
