--- a/sections/index__image-with-text-overlay.liquid
+++ b/sections/index__image-with-text-overlay.liquid
@@ -10,6 +10,11 @@
   "name": "Image with text overlay",
   "class": "image-with-text-overlay overlaid-header-option",
   "settings": [
+  {
+    "type": "color",
+    "id": "bg_color",
+    "label": "Backgroud color"
+  },
     {
       "type": "url",
       "id": "link",
