--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -765,3 +765,123 @@ Usage: codyhouse.co/license
     }
   }
 }
+
+/* -------------------------------- 
+
+File#: _1_previous-next-links
+Title: Previous/Next Links
+Descr: Links to previous/next articles
+Usage: codyhouse.co/license
+
+-------------------------------- */
+
+.pn-links {
+  border-top: 1px solid $color-contrast-low;
+  border-bottom: 1px solid $color-contrast-low;
+}
+
+// @include respond-to("medium-up") {
+// .pn-links__item:first-child {
+//   .pn-links__link {
+//     border-bottom: none;
+//   }
+// }
+
+.pn-links__link {
+  display: flex;
+  align-items: center;
+  @include respond-to("medium-down") {
+    justify-content: center;
+  }
+  justify-content: space-between;
+  height: 100%;
+  color: inherit;
+  text-decoration: none;
+  padding: $gutter;
+
+  &:hover {
+    text-decoration: underline;
+
+    .pn-links__icon {
+      line:nth-child(1) {
+        transform: rotate(180deg);
+      }
+
+      line:nth-child(2) {
+        transform: rotate(-180deg);
+      }
+
+      line:nth-child(3) {
+        stroke-dashoffset: 14;
+      }
+    }
+  }
+}
+
+.pn-links__icon {
+  // animated icon
+  flex-shrink: 0;
+
+  line:nth-child(1),
+  line:nth-child(2) {
+    transition: transform 0.3s ease-out;
+    -webkit-transition: transform 0.3s ease-out;
+    -moz-transition: transform 0.3s ease-out;
+    -ms-transition: transform 0.3s ease-out;
+    -o-transition: transform 0.3s ease-out;
+  }
+
+  line:nth-child(1) {
+    transform-origin: 42px 19px;
+  }
+
+  line:nth-child(2) {
+    transform-origin: 42px 29px;
+  }
+
+  line:nth-child(3) {
+    stroke-dasharray: 48;
+    transition: stroke-dashoffset 0.3s ease-out;
+  }
+}
+
+@include respond-to("medium-up") {
+  .pn-links__item:first-child .pn-links__link {
+    border-bottom: none;
+    border-right: 1px solid $color-contrast-low;
+  }
+}
+
+.flip-x {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
+
+.sr-only {
+  // content made available only to screen readers
+  position: absolute;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  border: 0;
+  white-space: nowrap;
+}
+
+@mixin srHide {
+  position: absolute;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+}
+
+@mixin srShow {
+  position: static;
+  clip: auto;
+  clip-path: none;
+}
