--- a/snippets/collection__nav.liquid
+++ b/snippets/collection__nav.liquid
@@ -1,7 +1,13 @@
+{% assign currentCollection = collection.url %}
+{%- comment -%}// show collection next / prev links - 
+first we have to find the current collection in the linklist and then grab its index in the for loop. 
+Then we grab the next and prev based on that number
+{%- endcomment -%}
+
 <section class="bg-contrast-lower width-100 padding-xxl  margin-top-xxl">
-  <h2 class="center">More to explore.</h2>
+  <h2 class="text-center">{{ 'collections.general.navigation_title' | t }}</h2>
   <!-- Previous/Next Links -->
-  <ul class="pn-links grid  margin-top-md text-md">
+  <ul class="pn-links grid flex margin-top-md text-md">
     {% for link in linklists['collection-nav'].links %}
       {% if link.url == currentCollection %}
         {% assign currentIndex = forloop.index %}
@@ -11,7 +17,7 @@
       {% endfor %}
       {% for link in linklists['collection-nav'].links %}
         {% if forloop.index == previousIndex %}
-        <li class="pn-links__item col-6@md">
+        <li class="pn-links__item one-half">
           <a class="pn-links__link justify-center justify-between@md" href="{{ link.url }}">
             <svg class="pn-links__icon icon icon--lg flip-x" viewBox="0 0 48 48">
               <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
@@ -20,16 +26,16 @@
                 <line x1="47" y1="24" x2="1.5" y2="24" />
               </g>
             </svg>
-            <span class="margin-left-sm">
+            <span class="margin-left-sm subtitle" style="margin-bottom: 0px;">
               <i class="sr-only">Previous: </i>{{ link.title }}
             </span>
           </a>
         </li>
         {% elsif forloop.index == nextIndex %}
-        <li class="pn-links__item col-6@md">
+        <li class="pn-links__item one-half">
           <a class="pn-links__link justify-center justify-between@md" href="{{ link.url }}">
-            <span class="margin-right-sm">
-              <i class="sr-only">Previous: </i>{{ link.title }}
+            <span class="margin-right-sm  subtitle" style="margin-bottom: 0px;">
+              <i class="sr-only">Next: </i>{{ link.title }}
             </span>
             <svg class="pn-links__icon icon icon--lg" viewBox="0 0 48 48">
               <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
