--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -87,6 +87,9 @@ $color-primary: hsl(41, 44%, 37%);
 .margin-top-lg {
   margin-top: $gutter;
 }
+.margin-top-xxl {
+  margin-top: 2.5em;
+}
 
 .padding-y-xl {
   margin-top: 60px;
