--- a/assets/styles/sections/mega-menu.scss
+++ b/assets/styles/sections/mega-menu.scss
@@ -64,6 +64,9 @@
     display: inline-block;
     padding: 0.5em 0;
     line-height: 1;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .mega-menu__image {
