--- a/sections/index__image-with-text-overlay.liquid
+++ b/sections/index__image-with-text-overlay.liquid
@@ -44,8 +44,7 @@
     {
       "type": "richtext",
       "id": "pretext",
-      "label": "Preheading",
-      "default": "<p>Preheading</p>"
+      "label": "Preheading"
     },
     {
       "type": "text",
@@ -56,8 +55,7 @@
     {
       "type": "richtext",
       "id": "subtitle",
-      "label": "Subheading",
-      "default": "<p>Additional info in the subheading</p>"
+      "label": "Subheading"
     },
     {
       "type": "color",
@@ -69,13 +67,13 @@
       "type": "color",
       "id": "heading_color",
       "label": "Heading",
-      "default": "#000000"
+      "default": "#EBEAE4"
     },
     {
       "type": "color",
       "id": "subheading_color",
       "label": "Subheading",
-      "default": "#000000"
+      "default": "#EBEAE4"
     },
     {
       "type": "select",
@@ -95,7 +93,7 @@
           "label": "Right"
         }
       ],
-      "default": "center"
+      "default": "left"
     },
     {
       "type": "select",
@@ -144,8 +142,7 @@
     {
       "type": "color",
       "id": "background_color",
-      "label": "Background",
-      "default": "#FFFFFF"
+      "label": "Background"
     },
     {
       "type": "range",
@@ -153,14 +150,13 @@
       "label": "Background opacity",
       "min": 0,
       "max": 100,
-      "default": 77,
+      "default": 0,
       "unit": "%"
     },
     {
       "type": "color",
       "id": "border_color",
-      "label": "Border",
-      "default": "#FFFFFF"
+      "label": "Border"
     },
     {
       "type": "range",
@@ -282,7 +278,7 @@
       "type": "checkbox",
       "id": "mobile_text_below_image",
       "label": "Show text below image",
-      "default": true
+      "default": false
     },
     {
       "type": "color",
