--- a/templates/page.rewards copy.liquid
+++ b/templates/page.rewards copy.liquid
@@ -2,5 +2,4 @@
   The contents of the page.etails.liquid template can be found in /sections/page-details-template.liquid
 {% endcomment %}
 
-{% section 'page-landing__main' %}
-{% section 'index__social-gallery' %}
+{% section 'page-rewards__main' %}
