Added Texas icon + Added bg-video to landing page

--- a/sections/page-landing__main.liquid
+++ b/sections/page-landing__main.liquid
@@ -1492,6 +1492,17 @@
       "name": "Image with text overlay",
       "settings": [
         {
+          "type": "checkbox",
+          "id": "overlay",
+          "label": "Show overlay"
+        },
+        {
+          "type": "text",
+          "id": "media_loop",
+          "label": "Video URL - MP4/MOV",
+          "info": "Add a 2-5 second video to loop as the background."
+        },
+        {
           "type": "header",
           "content": "Image"
         },
